--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <h3>Hello <span id="box"></span></h3>
+    <div id="app"></div>
 </body>
 </html>
